--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -114,7 +114,7 @@
       const hours = now.getHours();
       const mins = now.getMinutes();
 
-      //90 because we offset
+      //90 because we offset it by 90degs initially
       const secondsDegrees = ((seconds / 60) * 360) + 90;
       const hoursDegrees = ((hours / 12) * 360 ) + 90;
       const minsDegrees = ((mins / 60 ) * 360) + 90 ;
