--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -25,7 +25,22 @@
     /*
       misc styles, nothing to do with CSS variables
     */
+    :root{
+      --base: #ffc600;
+      --spacing: 10px;
+      --blur: 10px
+    }
 
+
+    img {
+      background: var(--base);
+      padding: var(--spacing);
+      filter: blur(var(--blur));
+    }
+    
+    .hl {
+      color: var(--base);
+    }
     body {
       text-align: center;
     }
@@ -53,6 +68,19 @@
   </style>
 
   <script>
+
+    const inputs = document.querySelectorAll('.controls input');
+
+    function handleUpdate() {
+      //old this.getAttribute()
+      const suffix = this.dataset.sizing || '';
+
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix )
+    }
+
+
+    inputs.forEach(input => input.addEventListener('change', handleUpdate))
+    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate))
   </script>
 
 </body>
